# calculator

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  PKGBUILD  README.md  cmake_install.cmake  compile_commands.json  gtk_test.cpp  gtk_test.h  main.cpp  vars.txt
app/: main.cpp  main.hpp  menu.cpp  menu.hpp
lib/: Calc.cpp  Calc.hpp  Pocketcalculator.cpp  Pocketcalculator.hpp  Sevensegment.cpp  Sevensegment.hpp  a.out  calc.cpp  calc.hpp  digit.cpp  digit.hpp  pocketcalculator.cpp  pocketcalculator.hpp  sevensegment.cpp  sevensegment.hpp
test/: calc_test.cpp
